--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.37.3 2015-05-28
+=================
+Added arm support for Toolbelt v4
+
 3.37.2 2015-05-27
 =================
 Made confirmation language clearer for pg:copy
