--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+3.37.4 2015-06-01
+=================
+Use toolbelt v4 for auth:whoami
+Fix ps:scale with Standard-1X dynos
+Fix arm support on some machines
+Allow pg:backups cancel to take an optional transfer name
+Fix sorting on pg:backups
+Fixed config:unset for paranoid apps
+
 3.37.3 2015-05-28
 =================
 Added arm support for Toolbelt v4
