--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.37.5 2015-06-01
+=================
+Fixed auth:whoami on first run
+
 3.37.4 2015-06-01
 =================
 Use toolbelt v4 for auth:whoami
