--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.40.7 2015-07-29
+=================
+Automatic SSH tunneling for HPG
+
 3.40.6 2015-07-23
 =================
 Fix for space conflicts wrt HEROKU_ORGANIZATION
