--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.41.1 2015-08-12
+=================
+Fix debian releases without foreman
+
 3.41.0 2015-08-12
 =================
 Fixed OSX installer for El Capitan
