--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.5 2015-09-28
+=================
+Move v4 windows directory to LOCALAPPDATA
+
 3.42.4 2015-09-28
 =================
 Move v4 windows directory to LOCALAPPDIR
