--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.9 2015-09-28
+=================
+Updated Gemfile.lock
+
 3.42.8 2015-09-28
 =================
 Fixed auto-login with --app flags
