--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.11 2015-09-28
+==================
+Reverted addon removal until all v4 clients have it
+
 3.42.10 2015-09-28
 ==================
 Moved addons to v4
