--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.13 2015-09-30
+==================
+Resolve add-ons for pg:* commands with API
+
 3.42.12 2015-09-29
 ==================
 Fixed help for v4 commands that are overridden (such as `addons`)
