--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.15 2015-09-31
+==================
+Catch all errors when attempting to delete old v4 release
+
 3.42.14 2015-09-30
 ==================
 Ensure v4 is not 4.24.* which won't autoupdate on Windows
