--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.17 2015-10-09
+==================
+Make utf-8 the default encoding
+
 3.42.16 2015-10-08
 ==================
 Improve handling of shareable addons with postgres
