--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 3.42.17 2015-10-09
 ==================
+Fix LOCALAPPDATA dir on Windows with non-ASCII characters
+Increase timeout when downloading v4
+
+3.42.17 2015-10-09
+==================
 Make utf-8 the default encoding
 
 3.42.16 2015-10-08
