--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.20 2015-10-10
+==================
+Prevent running v4 hidden commands by default
+
 3.42.19 2015-10-10
 ==================
 Fix help indices for v4 topics
