--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.24 2015-12-04
+==================
+Revert exec to shellescape while I fix windows bug
+
 3.42.23 2015-12-03
 ==================
 Update RELEASE-FULL.md OSX notes
