--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.25 2015-12-08
+==================
+Use system & exit on windows when non-ascii args
+
 3.42.24 2015-12-04
 ==================
 Revert exec to shellescape while I fix windows bug
