--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+3.42.26 2016-01-07
+==================
+Fix bug with international characters & createdb
+Update copyright notice to 2016
+
 3.42.25 2015-12-08
 ==================
 Use system & exit on windows when non-ascii args
