--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.29 2016-01-13
+==================
+Fixed analytics to not report when not a tty
+
 3.42.28 2016-01-13
 ==================
 Added analytics
