--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.34 2016-02-08
+==================
+Encode error as utf-8 before joining
+
 3.42.33 2016-01-28
 ==================
 Deprecated ruby sudo
