--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.36 2016-02-11
+==================
+Call org_api.lock_app when --locked flag is passed
+
 3.42.35 2016-02-10
 ==================
 Scrub URI::InvalidURIError message for rollbar
