--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.37 2016-02-22
+==================
+Add fix for Gem::Specification method_missing
+
 3.42.36 2016-02-11
 ==================
 Call org_api.lock_app when --locked flag is passed
