--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.39 2016-03-02
+==================
+Bump heroku-api dependency to 0.4.2
+
 3.42.38 2016-02-25
 ==================
 Remove sharing commands (available as access now)
