--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.43 2016-03-18
+==================
+Fix invalid byte sequence in format_with_bang
+
 3.42.42 2016-03-14
 ==================
 Bump version after fix in build server process
