--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.46 2016-04-06
+==================
+Enabled analytics
+
 3.42.45 2016-03-30
 ==================
 Only execute git installer if no registry key
