--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.42.48 2016-04-08
+==================
+Change exit code for ubuntu update to zero
+
 3.42.47 2016-04-06
 ==================
 Skip analytics if no user
