--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+3.42.49 2016-04-09
+==================
+Cleaned up output when installing v4 CLI
+Analytics update
+
 3.42.48 2016-04-08
 ==================
 Change exit code for ubuntu update to zero
