--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.43.3  2016-05-25
+==================
+Retry v5 download on failure
+
 3.43.2  2016-05-05
 ==================
 Download v5 directly
