--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.43.12 2016-09-07
+==================
+Revert: Update rest-client gem because security vulnerabilities
+
 3.43.11 2016-09-07
 ==================
 Update rest-client gem because security vulnerabilities
