--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.43.14 2016-11-11
+==================
+Fix windows autoupdates
+
 3.43.13 2016-10-28
 ==================
 Stop assuming domain for some private endpoints
