--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.43.15 2016-12-06
+==================
+Use heroku.com domain for SSL-Doctor
+
 3.43.14 2016-11-11
 ==================
 Fix windows autoupdates
