--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+3.99.1 2017-3-17
+====================
+Fix help and listing plugins
+
 3.99.0 2017-03-13
 =================
 Add deprecation message
